appMesh/canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proddetail2
  namespace: prodcatalog-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proddetail2
  template:
    metadata:
      labels:
        app: proddetail2
    spec:
      serviceAccountName: prodcatalog-envoy-proxies
      containers:
        - name: proddetail
          image: "jojiisacth/catalog_detail:2.0"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            successThreshold: 3
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: proddetail2
  namespace: prodcatalog-ns
  labels:
    app: proddetail2
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: proddetail2
---
