appMesh/virtual_gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-gw
  namespace: prodcatalog-ns
  
spec:
  ports:
    - port: 80
      targetPort: 8088
      name: http
  selector:
    app: ingress-gw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gw
  namespace: prodcatalog-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-gw
  template:
    metadata:
      labels:
        app: ingress-gw
    spec:
      serviceAccountName: prodcatalog-envoy-proxies
      securityContext:
        fsGroup: 65534
      containers:
        - name: envoy
          image: ${ENVOY_IMAGE}
          ports:
            - containerPort: 8088
---
