appMesh/ingress-internet-facing.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prodcatalog-ns 
  name: prodcatalog-internet-facing.yaml
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing" 
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ingress-gw 
              port:
                number: 80
